--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "author": "Techcrush group 9",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase-admin": "^12.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "firebase-admin": "^12.0.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
