--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,9 @@
 # Use Node.js LTS version
 FROM node:18-alpine
 
+# Install build dependencies for bcrypt
+RUN apk add --no-cache python3 make g++
+
 # Set working directory
 WORKDIR /app
 
@@ -8,12 +11,12 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci
 
 # Copy application files
 COPY . .
 
-# Expose port (Railway will override this with PORT env variable)
+# Expose port
 EXPOSE 5000
 
 # Start the application
