--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "type": "module"
+  "type": "module",
+  "files": [
+    "src/**/*.js",
+    "src/templates/**/*.ejs"
+  ]
 }
