--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
