--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Techcrush group 9",
   "license": "MIT",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
