--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^6.0.0",
+    "combined-stream": "^1.0.8",
     "cors": "^2.8.5",
+    "delayed-stream": "^1.0.0",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
