--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "combined-stream": "^1.0.8",
     "cors": "^2.8.5",
     "delayed-stream": "^1.0.0",
@@ -29,6 +30,7 @@
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
     "resend": "^6.4.2"
   },
