--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
-    "resend": "^6.4.2"
+    "resend": "^6.4.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
